--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,79 @@
     <title>Amanpuri Hotel - Contact</title>
     <link rel="stylesheet" href="css/headerstyles.css" />
     <link rel="stylesheet" href="css/footerstyles.css" />
+    <style>
+      .form-container {
+        max-width: 700px;
+        margin: 60px auto;
+        padding: 20px;
+        background: #fff8e5;
+        border-radius: 15px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      form label {
+        display: block;
+        margin-top: 15px;
+        font-weight: bold;
+        color: black;
+      }
+
+      form input,
+      form select,
+      form textarea {
+        width: 100%;
+        padding: 5px;
+        margin-top: 5px;
+        border-radius: 8px;
+        border: 1px solid #ccc;
+        font-size: 1rem;
+      }
+
+      form button {
+        margin-top: 20px;
+        padding: 10px 20px;
+        background-color: #ffde65;
+        color: #333;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-weight: bold;
+      }
+
+      form button:hover {
+        background-color: #f5c518;
+      }
+
+      .tabs {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+        gap: 10px;
+      }
+
+      .tab {
+        padding: 10px 20px;
+        background-color: #ffe68c;
+        border-radius: 8px 8px 0 0;
+        cursor: pointer;
+        font-weight: bold;
+        transition: background 0.3s transform 0.3s;
+        color: black;
+      }
+
+      .tab.active {
+        background-color: #f5c518;
+        box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      .form-section {
+        display: none;
+      }
+
+      .form-section.active {
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <div id="header"></div>
