Shtimi i llojeve te dhomave dhe ndryshimi i fotove

--- a/rooms.html
+++ b/rooms.html
@@ -56,9 +56,9 @@
 <div class="room">
     <h1 style="color: #f5c518; justify-content: center; text-align: center; padding: 20px;"> Standard Room </h1>
     <div class="photo-gallery" style="margin-bottom: 10px;"> 
-      <img src="foto/Aman_Amanpuri_Dining_6_0.webp" alt="Amanpuri Resort 1">
+      <img src="foto/standard room1.jpg" alt="Amanpuri Resort 1">
       <img src="foto/Aman_Amanpuri_Dining_2_0.webp" alt="Amanpuri Resort 2">
-      <img src="foto/images.jpg" alt="Amanpuri Resort 3">
+      <img src="foto/standard room.jpg" alt="Amanpuri Resort 3">
       <img src="foto/Aman_Amanpuri_Dining_7_0.webp" alt="Amanpuri Resort 4">
     </div>
     <div style="text-align: center;">
@@ -70,34 +70,64 @@
   </div>
 
   <div class="room">
-    <h1 style="color: #f5c518; justify-content: center; text-align: center; padding: 20px;"> Standard Room </h1>
+    <h1 style="color: #f5c518; justify-content: center; text-align: center; padding: 20px;"> Luxory Room </h1>
     <div class="photo-gallery" style="margin-bottom: 10px;"> 
-      <img src="foto/Aman_Amanpuri_Dining_6_0.webp" alt="Amanpuri Resort 1">
-      <img src="foto/Aman_Amanpuri_Dining_2_0.webp" alt="Amanpuri Resort 2">
-      <img src="foto/images.jpg" alt="Amanpuri Resort 3">
-      <img src="foto/Aman_Amanpuri_Dining_7_0.webp" alt="Amanpuri Resort 4">
+      <img src="foto/luxoryroom1.jpg" alt="Amanpuri Resort 1">
+      <img src="foto/luxoryroom2.jpg" alt="Amanpuri Resort 2">
+      <img src="foto/luxoryroom3.jpg" alt="Amanpuri Resort 3">
+      <img src="foto/luxoryroom4.jpg" alt="Amanpuri Resort 4">
     </div>
     <div style="text-align: center;">
       <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
         Book Now
       </button>
-      <h3 style="color: #000000;">Price: $250 per night</h3>
+      <h3 style="color: #000000;">Price: $1500 per night</h3>
     </div>
   </div>
 
   <div class="room">
-    <h1 style="color: #f5c518; justify-content: center; text-align: center; padding: 20px;"> Standard Room </h1>
+    <h1 style="color: #f5c518; justify-content: center; text-align: center; padding: 20px;"> Private Villas </h1>
     <div class="photo-gallery" style="margin-bottom: 10px; align-items: center;"> 
-      <img src="foto/Aman_Amanpuri_Dining_6_0.webp" alt="Amanpuri Resort 1">
-      <img src="foto/Aman_Amanpuri_Dining_2_0.webp" alt="Amanpuri Resort 2">
-      <img src="foto/images.jpg" alt="Amanpuri Resort 3">
-      <img src="foto/Aman_Amanpuri_Dining_7_0.webp" alt="Amanpuri Resort 4">
+      <img src="foto/villat1.jpg" alt="Amanpuri Resort 1">
+      <img src="foto/villat2.jpg" alt="Amanpuri Resort 2">
+      <img src="foto/villat3.jpg" alt="Amanpuri Resort 3">
+      <img src="foto/villat4.jpg" alt="Amanpuri Resort 4">
     </div>
     <div style="text-align: center;">
       <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
         Book Now
       </button>
-      <h3 style="color: #000000;">Price: $250 per night</h3>
+      <h3 style="color: #000000;">Price: $900 per night</h3>
+    </div>
+  </div>
+  <div class="room">
+    <h1 style="color: #f5c518; justify-content: center; text-align: center; padding: 20px;"> Family Room </h1>
+    <div class="photo-gallery" style="margin-bottom: 10px; align-items: center;"> 
+      <img src="foto/familyroom1.jpg" alt="Amanpuri Resort 1">
+      <img src="foto/familyroom2.jpg" alt="Amanpuri Resort 2">
+      <img src="foto/familyroom3.jpg" alt="Amanpuri Resort 3">
+      <img src="foto/familyroom4.jpg" alt="Amanpuri Resort 4">
+    </div>
+    <div style="text-align: center;">
+      <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
+        Book Now
+      </button>
+      <h3 style="color: #000000;">Price: $750 per night</h3>
+    </div>
+  </div>
+  <div class="room">
+    <h1 style="color: #f5c518; justify-content: center; text-align: center; padding: 20px;"> Wellness Suite </h1>
+    <div class="photo-gallery" style="margin-bottom: 10px; align-items: center;"> 
+      <img src="foto/wellnesssuite1.jpg" alt="Amanpuri Resort 1">
+      <img src="foto/wellnesssuite2.jpg" alt="Amanpuri Resort 2">
+      <img src="foto/wellnesssuite3.jpg" alt="Amanpuri Resort 3">
+      <img src="foto/wellnesssuite4.jpg" alt="Amanpuri Resort 4">
+    </div>
+    <div style="text-align: center;">
+      <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
+        Book Now
+      </button>
+      <h3 style="color: #000000;">Price: $1250 per night</h3>
     </div>
   </div>
 
