--- a/contact.html
+++ b/contact.html
@@ -5,79 +5,7 @@
     <title>Amanpuri Hotel - Contact</title>
     <link rel="stylesheet" href="css/headerstyles.css" />
     <link rel="stylesheet" href="css/footerstyles.css" />
-    <style>
-      .form-container {
-        max-width: 700px;
-        margin: 60px auto;
-        padding: 20px;
-        background: #fff8e5;
-        border-radius: 15px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      }
-
-      form label {
-        display: block;
-        margin-top: 15px;
-        font-weight: bold;
-        color: black;
-      }
-
-      form input,
-      form select,
-      form textarea {
-        width: 100%;
-        padding: 5px;
-        margin-top: 5px;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-        font-size: 1rem;
-      }
-
-      form button {
-        margin-top: 20px;
-        padding: 10px 20px;
-        background-color: #ffde65;
-        color: #333;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        font-weight: bold;
-      }
-
-      form button:hover {
-        background-color: #f5c518;
-      }
-
-      .tabs {
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-        gap: 10px;
-      }
-
-      .tab {
-        padding: 10px 20px;
-        background-color: #ffe68c;
-        border-radius: 8px 8px 0 0;
-        cursor: pointer;
-        font-weight: bold;
-        transition: background 0.3s transform 0.3s;
-        color: black;
-      }
-
-      .tab.active {
-        background-color: #f5c518;
-        box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
-      }
-
-      .form-section {
-        display: none;
-      }
-
-      .form-section.active {
-        display: block;
-      }
-    </style>
+    <link rel="stylesheet" href="css/contacts.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -87,7 +15,7 @@
         .then((data) => (document.getElementById("header").innerHTML = data));
     </script>
 
-    <div>
+    <div class="">
       <div
         style="
           text-align: center;
@@ -100,104 +28,103 @@
       </div>
 
       <div class="tabs">
-        <div class="tab active" onclick="switchForm('flight')">
+        <div class="tab active" onclick="switchForm('flight',event)">
           ✈️ Flight Assistance
         </div>
-        <div class="tab" onclick="switchForm('car')">🚗 Car Pickup</div>
-        <div class="tab" onclick="switchForm('lost')">🕵️ Lost Item</div>
+        <div class="tab" onclick="switchForm('car', event)">🚗 Car Pickup</div>
+        <div class="tab" onclick="switchForm('lost', event)">🕵️ Lost Item</div>
       </div>
 
       <div class="form-container">
-        <form id="flight" class="form-section active" action="" method="POST">
-          <label>Name:</label>
-          <input type="text" name="name" required />
-          <label>Lastname:</label>
-          <input type="text" name="lastname" required />
-          <label>Email:</label>
-          <input type="email" name="email" required />
-          <label>Phone Number:</label>
-          <input type="tel" name="phone" required />
-          <label>Flight Number:</label>
-          <input type="text" name="flight_number" required />
-          <label>Arrival Date:</label>
-          <input type="date" name="arrival_date" required />
-          <label>Special Notes:</label>
-          <textarea name="notes"></textarea>
-          <button type="submit">Submit Flight Details</button>
-        </form>
+        <div class="center form-section active">
+          <div class="form">
+            <form id="flight" action="" method="POST">
+              <label>Name:</label>
+              <input type="text" name="name" required />
+              <label>Lastname:</label>
+              <input type="text" name="lastname" required />
+              <label>Email:</label>
+              <input type="email" name="email" required />
+              <label>Phone Number:</label>
+              <input type="tel" name="phone" required />
+              <label>Flight Number:</label>
+              <input type="text" name="flight_number" required />
+              <label>Arrival Date:</label>
+              <input type="date" name="arrival_date" required />
+              <label>Additional Notes:</label>
+              <textarea name="notes"></textarea>
+              <button type="submit">Submit Flight Details</button>
+            </form>
+          </div>
+        </div>
 
-        <form
-          id="car"
-          class="form-section"
-          action="car-handler.php"
-          method="POST"
-        >
-          <label>Name:</label>
-          <input type="text" name="name" required />
-          <label>Lastname:</label>
-          <input type="text" name="lastname" required />
-          <label>Email:</label>
-          <input type="email" name="email" required />
-          <label>Phone Number:</label>
-          <input type="tel" name="phone" required />
-          <label>Pickup Date & Time:</label>
-          <input type="datetime-local" name="pickup_time" required />
-          <label>Pickup Location:</label>
-          <input type="text" name="pickup_location" required />
-          <label>Destination:</label>
-          <input type="text" name="destination" required />
-          <label>Vehicle Preference:</label>
-          <select name="vehicle">
-            <option>Sedan</option>
-            <option>SUV</option>
-            <option>Minivan</option>
-            <option>Luxury</option>
-          </select>
-          <label>Additional Notes:</label>
-          <textarea name="notes"></textarea>
-          <button type="submit">Request Pickup</button>
-        </form>
+        <div class="center form-section">
+          <div class="form">
+            <form id="car" method="POST">
+              <label>Name:</label>
+              <input type="text" name="name" required />
+              <label>Lastname:</label>
+              <input type="text" name="lastname" required />
+              <label>Email:</label>
+              <input type="email" name="email" required />
+              <label>Phone Number:</label>
+              <input type="tel" name="phone" required />
+              <label>Pickup Date & Time:</label>
+              <input type="datetime-local" name="pickup_time" required />
+              <label>Pickup Location:</label>
+              <input type="text" name="pickup_location" required />
+              <label>Destination:</label>
+              <input type="text" name="destination" required />
+              <label>Vehicle Preference:</label>
+              <select name="vehicle">
+                <option>Sedan</option>
+                <option>SUV</option>
+                <option>Minivan</option>
+                <option>Luxury</option>
+              </select>
+              <label>Additional Notes:</label>
+              <textarea name="notes"></textarea>
+              <button type="submit">Request Pickup</button>
+            </form>
+          </div>
+        </div>
 
-        <form
-          id="lost"
-          class="form-section"
-          action="lost-item-handler.php"
-          method="POST"
-          enctype="multipart/form-data"
-        >
-          <label>Name:</label>
-          <input type="text" name="name" required />
-          <label>Lastname:</label>
-          <input type="text" name="lastname" required />
-          <label>Email:</label>
-          <input type="email" name="email" required />
-          <label>Phone Number:</label>
-          <input type="tel" name="phone" required />
-          <label>Preferred Time to Contact:</label>
-          <select name="preferred_time">
-            <option>Morning</option>
-            <option>Afternoon</option>
-            <option>After 5 PM</option>
-          </select>
-          <label>Reason for Contact:</label>
-          <select name="reason">
-            <option>Item left in room</option>
-            <option>Item lost in common area</option>
-            <option>Item lost during check-out</option>
-            <option>Other</option>
-          </select>
-          <label>Date of Stay:</label>
-          <input type="date" name="stay_date" required />
-          <label>Room Number:</label>
-          <input type="text" name="room_number" />
-          <label>Item Description:</label>
-          <textarea name="item_description" required></textarea>
-          <label>Attach Photo (optional):</label>
-          <input type="file" name="item_photo" accept="image/*" />
-          <label>Additional Comments:</label>
-          <textarea name="additional_info"></textarea>
-          <button type="submit">Submit Report</button>
-        </form>
+        <div class="center form-section">
+          <div class="form">
+            <form id="lost" action="" method="POST">
+              <label>Name:</label>
+              <input type="text" name="name" required />
+              <label>Lastname:</label>
+              <input type="text" name="lastname" required />
+              <label>Email:</label>
+              <input type="email" name="email" required />
+              <label>Phone Number:</label>
+              <input type="tel" name="phone" required />
+              <label>Preferred Time to Contact:</label>
+              <select name="preferred_time">
+                <option>Morning</option>
+                <option>Afternoon</option>
+                <option>After 5 PM</option>
+              </select>
+              <label>Reason for Contact:</label>
+              <select name="reason">
+                <option>Item left in room</option>
+                <option>Item lost in common area</option>
+                <option>Item lost during check-out</option>
+                <option>Other</option>
+              </select>
+              <label>Date of Stay:</label>
+              <input type="date" name="stay_date" required />
+              <label>Room Number:</label>
+              <input type="text" name="room_number" />
+              <label>Item Description:</label>
+              <textarea name="item_description" required></textarea>
+              <label>Additional Comments:</label>
+              <textarea name="additional_info"></textarea>
+              <button type="submit">Submit Report</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -206,6 +133,28 @@
       fetch("footer.html")
         .then((res) => res.text())
         .then((data) => (document.getElementById("footer").innerHTML = data));
+    </script>
+
+    <script>
+      function switchForm(formId, event) {
+        if (event) event.preventDefault();
+
+        document
+          .querySelectorAll(".form-section")
+          .forEach((f) => f.classList.remove("active"));
+
+        document
+          .querySelectorAll(".tab")
+          .forEach((t) => t.classList.remove("active"));
+
+        const targetForm = document.getElementById(formId);
+        const formContainer = targetForm.closest(".form-section");
+        if (formContainer) {
+          formContainer.classList.add("active");
+        }
+
+        event.target.classList.add("active");
+      }
     </script>
   </body>
 </html>
