Lidhja me faqen book

--- a/rooms.html
+++ b/rooms.html
@@ -62,9 +62,11 @@
       <img src="foto/Aman_Amanpuri_Dining_7_0.webp" alt="Amanpuri Resort 4">
     </div>
     <div style="text-align: center;">
+      <a href="book.html">
       <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
         Book Now
       </button>
+    </a>
       <h3 style="color: #000000;">Price: $250 per night</h3>
     </div>
   </div>
@@ -78,9 +80,11 @@
       <img src="foto/luxoryroom4.jpg" alt="Amanpuri Resort 4">
     </div>
     <div style="text-align: center;">
+      <a href="book.html">
       <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
         Book Now
       </button>
+    </a>
       <h3 style="color: #000000;">Price: $1500 per night</h3>
     </div>
   </div>
@@ -94,9 +98,11 @@
       <img src="foto/villat4.jpg" alt="Amanpuri Resort 4">
     </div>
     <div style="text-align: center;">
+      <a href="book.html">
       <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
         Book Now
       </button>
+    </a>
       <h3 style="color: #000000;">Price: $900 per night</h3>
     </div>
   </div>
@@ -109,9 +115,11 @@
       <img src="foto/familyroom4.jpg" alt="Amanpuri Resort 4">
     </div>
     <div style="text-align: center;">
+      <a href="book.html">
       <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
         Book Now
       </button>
+    </a>
       <h3 style="color: #000000;">Price: $750 per night</h3>
     </div>
   </div>
@@ -124,9 +132,11 @@
       <img src="foto/wellnesssuite4.jpg" alt="Amanpuri Resort 4">
     </div>
     <div style="text-align: center;">
+      <a href="book.html">
       <button class="book-now-button" style="background-color: #f5c518; padding: 15px 30px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">
         Book Now
       </button>
+    </a>
       <h3 style="color: #000000;">Price: $1250 per night</h3>
     </div>
   </div>
