--- a/rooms.html
+++ b/rooms.html
@@ -11,7 +11,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Makes it responsive */
       gap: 20px;
-      margin: 50px 0;
+      margin: 50px 20px;
     }
 
     .photo-gallery img {
