--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
       <h1>Amanpuri Hotel</h1>
       <nav>
         <a href="index.html" >Home</a>
-        <a href="rooms.html">Rooms</a>
+        <a href="rooms.php">Rooms</a>
         <a href="restaurant.html">Restaurant</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
