--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
         <a href="restaurant.html">Restaurant</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
-        <a href="book.html" class="book">Book Now</a>
+        <a href="book.php" class="book">Book Now</a>
       </nav>
     </div>
   </header>
